crates/fig-parser/tests/snapshots/integration_tests__paths__builtin_namespaces.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - std
          - io
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - core
          - mem
  - Using:
      visibility: Default
      annotations: []
      path:
        segments:
          - alloc
          - global
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: builtin_ns
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: x
              ty: ~
              value:
                TypeAccess:
                  object:
                    Path:
                      segments:
                        - std
                  member: VERSION
          - Let:
              annotations: []
              name: y
              ty: ~
              value:
                TypeAccess:
                  object:
                    Path:
                      segments:
                        - core
                  member: ARCH
          - Let:
              annotations: []
              name: ptr
              ty: ~
              value:
                Call:
                  callee:
                    TypeAccess:
                      object:
                        Path:
                          segments:
                            - alloc
                      member: allocate
                  args:
                    - name: ~
                      value:
                        IntegerLiteral:
                          base: Decimal
                          digits: "64"
                          suffix: ~
                  generic_args: ~
                  is_propagating: false
          - Pass
