crates/fig-parser/tests/snapshots/integration_tests__paths__simple_and_namespaced.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: use_paths
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Let:
              annotations: []
              name: x
              ty: ~
              value:
                Path:
                  segments:
                    - foo
          - Let:
              annotations: []
              name: y
              ty: ~
              value:
                TypeAccess:
                  object:
                    TypeAccess:
                      object:
                        Path:
                          segments:
                            - std
                      member: io
                  member: stdin
          - Let:
              annotations: []
              name: z
              ty: ~
              value:
                TypeAccess:
                  object:
                    TypeAccess:
                      object:
                        Path:
                          segments:
                            - core
                      member: math
                  member: PI
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                Path:
                  segments:
                    - some_value
          - Let:
              annotations: []
              name: b
              ty: ~
              value:
                TypeAccess:
                  object:
                    Path:
                      segments:
                        - some_module
                  member: some_value
          - Let:
              annotations: []
              name: c
              ty: ~
              value:
                TypeAccess:
                  object:
                    TypeAccess:
                      object:
                        Path:
                          segments:
                            - a
                      member: b
                  member: c
          - Pass
